2013-03-16  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Parser.pm (_parse_texi): accept the same 
	character in @value as in @set.

2013-03-14  Karl Berry  <karl@gnu.org>

	* maintain/regenerate_cmd_tests.sh,
	* tests/run_parser_all.sh,
	* tests/many_input_files/tex_l2h.sh: use $0 in some diagnostics.

	* NEWS: mention switch from cvs to svn.
	* doc/texinfo.txi (Invoking @t{pod2texi}): svn url instead of cvs
	for Perl manual in Texinfo.
	* contrib/perldoc-all/perldoc-all.texi: likewise, and turn off
	all underfull/overfull messages since we can't do anything about them.
	* contrib/perldoc-all/README: 5.16.3.
	* contrib/perldoc-all/GNUmakefile (all): set save_size in
	environment to avoid TeX overflow.
	(install): new target.
	* doc/texinfo.tex (\nonfillstart): only reset to \hfuzz=12pt
	if it's less than that.

	* README-hacking: tweaks to release wording.

2013-03-12  Karl Berry  <karl@gnu.org>

	* Version 5.1.

2013-03-11  Patrice Dumas  <pertusus@free.fr>

	* tp/init/tex4ht.pm (tex4ht_process_command): correct
	the warning, it should also give the reason of the error.
	Follow-up on Benno Schulenberg report.

2013-03-08  Karl Berry  <karl@gnu.org>

	* pretest 5.0.91.

	* install-info/install-info.c (print_help): combine
	sentence for better translation.
	* tp/init/tex4ht.pm (tex4ht_process_command): omit :
	for consistency.
	Report from Benno Schulenberg, 08 Mar 2013 22:07:31.

	* util/texi2dvi: don't mention Debian specifically;
	I don't think tetex-bin has been the name for a while.

	* util/gendocs.sh: omit --split=node for the sake of pre-5.0
	installations.  Report to bug-gnulib from Martin von Gagern,
	08 Mar 2013 19:20:36.

2013-03-05  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Parser.pm (_close_current): close correctly stacks when
	closing $format_raw_commands.  Report from Mat Booth.

2013-03-02  Karl Berry  <karl@gnu.org>

	* pretest 5.0.90.

	* NEWS,
	* doc/texinfo.txi (Macro Details): behavior of newlines in macro